[package]
name = "yolodoro"
version = "0.1.0"
authors = ["Moritz Ulrich <moritz@tarn-vedra.de>"]

[dependencies]
ctrlc = { version = "3.1.1", features = ["termination"] }
quicli = "0.4.0"
structopt = "0.2.14"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "3.3"

[target.'cfg(windows)'.dependencies]
winrt = {version = "0.3.0", features = ["windows-data", "windows-ui"]}
